@@ -100,37 +100,43 @@ void SubgraphDepthLocater::findStabbedSegments(Coordinate &stabbingRayLeftPt,vec
 }
 
 /**
-* Finds all non-horizontal segments intersecting the stabbing line
-* in the input dirEdge->
-* The stabbing line is the ray to the right of stabbingRayLeftPt->
-*
-* @param stabbingRayLeftPt the left-hand origin of the stabbing line
-* @param stabbedSegments the current list of {@link DepthSegments} intersecting the stabbing line
-*/
+ * Finds all non-horizontal segments intersecting the stabbing line
+ * in the input dirEdge->
+ * The stabbing line is the ray to the right of stabbingRayLeftPt->
+ *
+ * @param stabbingRayLeftPt the left-hand origin of the stabbing line
+ * @param stabbedSegments the current list of DepthSegments
+ * intersecting the stabbing line
+ */
 void
 SubgraphDepthLocater::findStabbedSegments(Coordinate &stabbingRayLeftPt,DirectedEdge *dirEdge,vector<DepthSegment*> *stabbedSegments)
 {
 	const CoordinateSequence *pts=dirEdge->getEdge()->getCoordinates();
 
 	for (int i=0; i<pts->getSize()-1; i++) {
-		seg->p0=pts->getAt(i);
-		seg->p1=pts->getAt(i + 1);
+		//seg->p0=pts->getAt(i);
+		//seg->p1=pts->getAt(i + 1);
+
+		const Coordinate *low=&(pts->getAt(i));
+		const Coordinate *high=&(pts->getAt(i+1));
+		const Coordinate *swap=NULL;
 
 #if DEBUG
 	cerr<<" SubgraphDepthLocater::findStabbedSegments: segment "<<i<<" ("<<seg->toString()<<") ";
 #endif
 
-		// ensure segment always points upwards
-		if (seg->p0.y > seg->p1.y)
-		{
-			seg->reverse();
-#if DEBUG
-			cerr<<" reverse ("<<seg->toString()<<") ";
-#endif
-		}
+//		// ensure segment always points upwards
+//		//if (seg->p0.y > seg->p1.y)
+//		{
+//			seg->reverse();
+//#if DEBUG
+//			cerr<<" reverse ("<<seg->toString()<<") ";
+//#endif
+//		}
 
 		// skip segment if it is left of the stabbing line
-		double maxx=max(seg->p0.x, seg->p1.x);
+		//double maxx=max(seg->p0.x, seg->p1.x);
+		double maxx=max(low->x, high->x);
 		if (maxx < stabbingRayLeftPt.x)
 		{
 #if DEBUG
@@ -141,7 +147,8 @@ SubgraphDepthLocater::findStabbedSegments(Coordinate &stabbingRayLeftPt,Directed
 
 		// skip horizontal segments (there will be a non-horizontal
 		// one carrying the same depth info
-		if (seg->isHorizontal())
+		//if (seg->isHorizontal())
+		if (low->y == high->y)
 		{
 #if DEBUG
 			cerr<<" segment is horizontal, skipping "<<endl;
@@ -150,8 +157,10 @@ SubgraphDepthLocater::findStabbedSegments(Coordinate &stabbingRayLeftPt,Directed
 		}
 
 		// skip if segment is above or below stabbing line
-		if (stabbingRayLeftPt.y < seg->p0.y ||
-			stabbingRayLeftPt.y > seg->p1.y)
+		//if (stabbingRayLeftPt.y < seg->p0.y ||
+			//stabbingRayLeftPt.y > seg->p1.y)
+		if (stabbingRayLeftPt.y < low->y ||
+			stabbingRayLeftPt.y > high->y)
 		{
 #if DEBUG
 			cerr<<" segment above or below stabbing line, skipping "<<endl;
@@ -160,7 +169,8 @@ SubgraphDepthLocater::findStabbedSegments(Coordinate &stabbingRayLeftPt,Directed
 		}
 
 		// skip if stabbing ray is right of the segment
-		if (CGAlgorithms::computeOrientation(seg->p0, seg->p1,
+		//if (CGAlgorithms::computeOrientation(seg->p0, seg->p1,
+		if (CGAlgorithms::computeOrientation(*low, *high,
 				stabbingRayLeftPt)==CGAlgorithms::RIGHT)
 		{
 #if DEBUG
@@ -169,14 +179,21 @@ SubgraphDepthLocater::findStabbedSegments(Coordinate &stabbingRayLeftPt,Directed
 			continue;
 		}
 
-		// stabbing line cuts this segment, so record it
-		int depth=dirEdge->getDepth(Position::LEFT);
-		// if segment direction was flipped, use RHS depth instead
-		if (! (seg->p0==pts->getAt(i)))
-			depth=dirEdge->getDepth(Position::RIGHT);
+//		// stabbing line cuts this segment, so record it
+//		int depth=dirEdge->getDepth(Position::LEFT);
+//		// if segment direction was flipped, use RHS depth instead
+//		if (! (seg->p0==pts->getAt(i)))
+//			depth=dirEdge->getDepth(Position::RIGHT);
+		int depth = swap ?
+			depth=dirEdge->getDepth(Position::RIGHT)
+			:
+			dirEdge->getDepth(Position::LEFT);
+
 #if DEBUG
 	cerr<<" depth: "<<depth<<endl;
 #endif
+		seg->p0 = *low;
+		seg->p1 = *high;
 		DepthSegment *ds=new DepthSegment(seg, depth);
 		stabbedSegments->push_back(ds);
 	}
@@ -257,6 +274,9 @@ bool DepthSegmentLT(DepthSegment *first, DepthSegment *second) {
 
 /**********************************************************************
  * $Log$
+ * Revision 1.9  2005/06/27 21:21:21  strk
+ * Reduced Coordinate copies due to LineSegment overuse
+ *
  * Revision 1.8  2005/05/23 15:13:00  strk
  * Added debugging output
  *
